--- a/food_data-main/food_data-main/frontend/src/layout/layout.scss
+++ b/food_data-main/food_data-main/frontend/src/layout/layout.scss
@@ -6,17 +6,39 @@
   .svg-style {
     color: rgb(255, 255, 255);
   }
+
+  .navbar-start{
+    display: inline-flex;
+  }
+
+
   .logo {
     /* Logo */
-    position: absolute;
-    width: 126px;
-    height: 32px;
-    left: 32px;
+    position: relative;
+    width: 80px;
+    height: 50px;
+    left: 10px;
+    right: 1122px;
+    top: 2px;
+    bottom: 14px;
+  }
+
+
+  .logo-text {
+    position: relative;
+    width: 160px;
+    height: 50px;
+    left: 20px;
     right: 1122px;
     top: 10px;
     bottom: 14px;
+    font-family: serif;
+    font-size: larger;
+    font-weight: 600;
+    color: #ffffff;
   }
 }
+
 
 .side {
   width: 168px;
